--- a/haskoin-wallet.cabal
+++ b/haskoin-wallet.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 825b194afc3a927f51234c0619fbe8e2449cdcd63b7f9c435bde44f37c0e8e40
+-- hash: f12b0772f7f53cd3d8f07aa37c6254bc55491e5e8c151b141c228c265aebd530
 
 name:           haskoin-wallet
 version:        0.6.0.0
@@ -53,6 +53,7 @@ library
     , http-types
     , lens
     , lens-aeson
+    , optparse-applicative
     , pretty
     , string-conversions
     , text
@@ -65,10 +66,9 @@ library
       Network.Haskoin.Wallet.Signing
       Network.Haskoin.Wallet.HTTP
       Network.Haskoin.Wallet.Amounts
-      Network.Haskoin.Wallet.Printer
+      Network.Haskoin.Wallet.Doc
       Network.Haskoin.Wallet.FoundationCompat
       Network.Haskoin.Wallet.DetailedTx
-      Network.Haskoin.Wallet.UsageInfo
   other-modules:
       Paths_haskoin_wallet
   default-language: Haskell2010
