--- a/package.yaml
+++ b/package.yaml
@@ -33,10 +33,9 @@ library:
   - Network.Haskoin.Wallet.Signing
   - Network.Haskoin.Wallet.HTTP
   - Network.Haskoin.Wallet.Amounts
-  - Network.Haskoin.Wallet.Printer
+  - Network.Haskoin.Wallet.Doc
   - Network.Haskoin.Wallet.FoundationCompat
   - Network.Haskoin.Wallet.DetailedTx
-  - Network.Haskoin.Wallet.UsageInfo
   dependencies:
   - aeson
   - ansi-terminal
@@ -57,6 +56,7 @@ library:
   - http-types
   - lens
   - lens-aeson
+  - optparse-applicative
   - pretty
   - string-conversions
   - text
