--- a/package.yaml
+++ b/package.yaml
@@ -32,6 +32,7 @@ library:
   - Network.Haskoin.Wallet.Parser
   - Network.Haskoin.Wallet.Entropy
   - Network.Haskoin.Wallet.AccountStore
+  - Network.Haskoin.Wallet.FileIO
   - Network.Haskoin.Wallet.Signing
   - Network.Haskoin.Wallet.HTTP
   - Network.Haskoin.Wallet.Amounts
