--- a/haskoin-wallet.cabal
+++ b/haskoin-wallet.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: c112e495777024aaefab5ef74f5bc2c80fe64cc406237fec4c1bd5d6256c3b18
+-- hash: 86b953242582599c8bf8086a4dfc40306dbbe44da8d2eee3c3635ca8b6a6f08c
 
 name:           haskoin-wallet
 version:        0.6.0
@@ -55,6 +55,7 @@ library
     , mtl
     , optparse-applicative
     , pretty
+    , random
     , string-conversions
     , text
     , tostring
