--- a/package.yaml
+++ b/package.yaml
@@ -22,62 +22,47 @@ github: haskoin/haskoin-wallet.git
 homepage: http://github.com/haskoin/haskoin-wallet
 bug-reports: http://github.com/haskoin/haskoin-wallet/issues
 dependencies:
-  - base >=4.7 && <5
+  base: ">=4.9 && <5"
+  aeson: ">= 1.4.6.0"
+  ansi-terminal: ">= 0.10.3"
+  aeson-pretty: ">= 0.8.8"
+  base16-bytestring: ">= 0.1.1.6"
+  base64-bytestring: ">= 1.0.0.3"
+  bytestring: ">= 0.10.10.0"
+  cereal: ">= 0.5.8.1"
+  containers: ">= 0.6.2.1"
+  data-default: ">= 0.7.1.1"
+  directory: ">= 1.3.6.0"
+  Decimal: ">= 0.5.1"
+  entropy: ">= 0.4.1.6"
+  haskeline: ">= 0.7.5.0"
+  haskoin-core: ">= 0.13.7"
+  haskoin-store-data: ">= 0.30.2"
+  http-types: ">= 0.12.3"
+  lens: ">= 4.18.1"
+  lens-aeson: ">= 1.1"
+  mtl: ">= 2.2.2"
+  optparse-applicative: ">= 0.15.1.0"
+  pretty: ">= 1.1.3.6"
+  random: ">= 1.1"
+  string-conversions: ">= 0.4.0.1"
+  text: ">= 1.2.4.0"
+  tostring: ">= 0.2.1.1"
+  transformers: ">= 0.5.6.2"
+  unordered-containers: ">= 0.2.10.0"
+  wreq: ">= 0.5.3.2"
 library:
   source-dirs: src
   ghc-options: -Wall
-  exposed-modules:
-    - Network.Haskoin.Wallet
-    - Network.Haskoin.Wallet.AccountStore
-    - Network.Haskoin.Wallet.Amounts
-    - Network.Haskoin.Wallet.Commands
-    - Network.Haskoin.Wallet.Entropy
-    - Network.Haskoin.Wallet.FileIO
-    - Network.Haskoin.Wallet.Parser
-    - Network.Haskoin.Wallet.Signing
-    - Network.Haskoin.Wallet.TxInfo
-    - Network.Haskoin.Wallet.Util
-  dependencies: &lib-deps
-    - aeson
-    - ansi-terminal
-    - aeson-pretty
-    - base16-bytestring
-    - base64-bytestring
-    - bytestring
-    - cereal
-    - containers
-    - data-default
-    - directory
-    - Decimal
-    - entropy
-    - haskeline
-    - haskoin-core
-    - haskoin-store-data
-    - http-types
-    - lens
-    - lens-aeson
-    - mtl
-    - optparse-applicative
-    - pretty
-    - random
-    - string-conversions
-    - text
-    - tostring
-    - transformers
-    - unordered-containers
-    - wreq
 executables:
   hw:
     main: Main.hs
     source-dirs: app
-    ghc-options:
-      - -Wall
-      - -rtsopts
-      - -threaded
+    ghc-options: -Wall
     dependencies:
-      - haskoin-wallet
+      haskoin-wallet: *version
 tests:
-  test-haskoin-wallet:
+  spec:
     main: Spec.hs
     source-dirs: test
     verbatim:
@@ -85,7 +70,6 @@ tests:
         hspec-discover:hspec-discover
     ghc-options: -Wall
     dependencies:
-      <<: *lib-deps
       haskoin-wallet: *version
       hspec: ">= 2.7.1"
       QuickCheck: ">= 2.13.2"
