--- a/stack.yaml
+++ b/stack.yaml
@@ -3,12 +3,12 @@ nix:
     - zlib
     - secp256k1
     - pkg-config
-resolver: lts-15.11
+resolver: lts-16.0
 extra-deps:
-- haskoin-core-0.13.6
+- ../haskoin-core
 - ../haskoin-store/data
-- murmur3-1.0.3
+- murmur3-1.0.4
 - ansi-terminal-0.10.3
 - parsec-extra-0.2.0.0
-- secp256k1-haskell-0.2.1
+- secp256k1-haskell-0.2.4
 
