--- a/stack.yaml
+++ b/stack.yaml
@@ -1,14 +1,16 @@
+resolver: lts-16.0
 nix:
   packages:
     - zlib
     - secp256k1
     - pkg-config
-resolver: lts-16.0
 extra-deps:
-- ../haskoin-core
-- ../haskoin-store/data
-- murmur3-1.0.4
-- ansi-terminal-0.10.3
-- parsec-extra-0.2.0.0
-- secp256k1-haskell-0.2.4
-
+  - github: haskoin/haskoin-core
+    commit: 6c3fdcf771fc92e7e5c2c7da62d6988447d0c4f6
+  - github: haskoin/haskoin-store
+    commit: 77fdf2170b17674221d3f782def14217ca0f4a5a
+    subdir: data
+  - murmur3-1.0.4
+  - ansi-terminal-0.10.3
+  - parsec-extra-0.2.0.0
+  - secp256k1-haskell-0.3.0
