--- a/haskoin-wallet.cabal
+++ b/haskoin-wallet.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 7ab396a15c203f86bc494bf8a702a2c8a20e9c1f9e8fa0176bcd1dcaa41d5cdf
+-- hash: 80a8f916ff822d449582a92b179bc1d8224277bf9f98b97cf252e42afe652f75
 
 name:           haskoin-wallet
 version:        0.6.0
@@ -123,6 +123,7 @@ test-suite spec
   other-modules:
       Network.Haskoin.Wallet.AccountStoreSpec
       Network.Haskoin.Wallet.AmountsSpec
+      Network.Haskoin.Wallet.EntropySpec
       Network.Haskoin.Wallet.TestUtils
       Paths_haskoin_wallet
   hs-source-dirs:
