Update stack file

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-resolver: lts-17.4
+resolver: lts-17.7
 nix:
   packages:
     - zlib
@@ -7,7 +7,10 @@ nix:
 extra-deps:
   - github: haskoin/haskoin-core
     commit: 1196c5a3efffc887670c62c6ead2ec45d9d3a5db
-  - ../haskoin-store/data
+  - github: haskoin/haskoin-store
+    commit: d7ce11d1f2d222b172b6c902e816590fb8ed1f50
+    subdirs:
+      - data
   - murmur3-1.0.4
   - ansi-terminal-0.10.3
   - parsec-extra-0.2.0.0
