--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name: haskoin-wallet
-version: &version 0.6.0
+version: &version 0.7.0
 synopsis: Lightweight command-line wallet for Bitcoin and Bitcoin Cash
 description: !
   haskoin-wallet (hw) is a lightweight Bitcoin wallet using BIP39 mnemonics and
@@ -26,7 +26,7 @@ dependencies:
   aeson: ">= 1.4.6.0"
   ansi-terminal: ">= 0.10.3"
   aeson-pretty: ">= 0.8.8"
-  base16-bytestring: ">= 0.1.1.6"
+  base16-bytestring: ">= 1.0.0.0"
   base64-bytestring: ">= 1.0.0.3"
   bytestring: ">= 0.10.10.0"
   cereal: ">= 0.5.8.1"
@@ -36,8 +36,8 @@ dependencies:
   Decimal: ">= 0.5.1"
   entropy: ">= 0.4.1.6"
   haskeline: ">= 0.7.5.0"
-  haskoin-core: ">= 0.13.7"
-  haskoin-store-data: ">= 0.65.0"
+  haskoin-core: ">= 1.0.0"
+  haskoin-store-data: ">= 1.0.0"
   http-types: ">= 0.12.3"
   lens: ">= 4.18.1"
   lens-aeson: ">= 1.1"
@@ -45,6 +45,7 @@ dependencies:
   optparse-applicative: ">= 0.15.1.0"
   pretty: ">= 1.1.3.6"
   random: ">= 1.1"
+  secp256k1-haskell: ">= 1.0.0"
   string-conversions: ">= 0.4.0.1"
   text: ">= 1.2.4.0"
   tostring: ">= 0.2.1.1"
