--- a/haskoin-wallet.cabal
+++ b/haskoin-wallet.cabal
@@ -4,10 +4,10 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 9428b61cc16c2222adae2f1931d2eb6ac71299ed2352c243d9c7f9e298c51bef
+-- hash: 307d84689c5f65b8cfa0b7597256a2215f88a22240217a0a0acfd37d0bbef974
 
 name:           haskoin-wallet
-version:        0.7.2
+version:        0.8.0
 synopsis:       Lightweight command-line wallet for Bitcoin and Bitcoin Cash
 description:    haskoin-wallet (hw) is a lightweight Bitcoin wallet using BIP39 mnemonics and
                 BIP44 account structure. It requires a full blockchain index such as
@@ -42,18 +42,23 @@ library
     , base64-bytestring >=1.0.0.3
     , bytestring >=0.10.10.0
     , cereal >=0.5.8.1
+    , conduit >=1.3.5
     , containers >=0.6.2.1
     , data-default >=0.7.1.1
     , directory >=1.3.6.0
     , entropy >=0.4.1.6
+    , esqueleto >=3.5.10.1
     , haskeline >=0.7.5.0
     , haskoin-core >=1.0.0
     , haskoin-store-data >=1.0.0
     , http-types >=0.12.3
     , lens >=4.18.1
     , lens-aeson >=1.1
+    , monad-logger >=0.3.40
     , mtl >=2.2.2
     , optparse-applicative >=0.15.1.0
+    , persistent >=2.14.5.1
+    , persistent-sqlite >=2.13.1.1
     , pretty >=1.1.3.6
     , random >=1.1
     , secp256k1-haskell >=1.0.0
@@ -68,6 +73,7 @@ library
       Network.Haskoin.Wallet.AccountStore
       Network.Haskoin.Wallet.Amounts
       Network.Haskoin.Wallet.Commands
+      Network.Haskoin.Wallet.Database
       Network.Haskoin.Wallet.Entropy
       Network.Haskoin.Wallet.FileIO
       Network.Haskoin.Wallet.Parser
@@ -93,19 +99,24 @@ executable hw
     , base64-bytestring >=1.0.0.3
     , bytestring >=0.10.10.0
     , cereal >=0.5.8.1
+    , conduit >=1.3.5
     , containers >=0.6.2.1
     , data-default >=0.7.1.1
     , directory >=1.3.6.0
     , entropy >=0.4.1.6
+    , esqueleto >=3.5.10.1
     , haskeline >=0.7.5.0
     , haskoin-core >=1.0.0
     , haskoin-store-data >=1.0.0
-    , haskoin-wallet ==0.7.2
+    , haskoin-wallet ==0.8.0
     , http-types >=0.12.3
     , lens >=4.18.1
     , lens-aeson >=1.1
+    , monad-logger >=0.3.40
     , mtl >=2.2.2
     , optparse-applicative >=0.15.1.0
+    , persistent >=2.14.5.1
+    , persistent-sqlite >=2.13.1.1
     , pretty >=1.1.3.6
     , random >=1.1
     , secp256k1-haskell >=1.0.0
@@ -144,20 +155,25 @@ test-suite spec
     , base64-bytestring >=1.0.0.3
     , bytestring >=0.10.10.0
     , cereal >=0.5.8.1
+    , conduit >=1.3.5
     , containers >=0.6.2.1
     , data-default >=0.7.1.1
     , directory >=1.3.6.0
     , entropy >=0.4.1.6
+    , esqueleto >=3.5.10.1
     , haskeline >=0.7.5.0
     , haskoin-core >=1.0.0
     , haskoin-store-data >=1.0.0
-    , haskoin-wallet ==0.7.2
+    , haskoin-wallet ==0.8.0
     , hspec >=2.7.1
     , http-types >=0.12.3
     , lens >=4.18.1
     , lens-aeson >=1.1
+    , monad-logger >=0.3.40
     , mtl >=2.2.2
     , optparse-applicative >=0.15.1.0
+    , persistent >=2.14.5.1
+    , persistent-sqlite >=2.13.1.1
     , pretty >=1.1.3.6
     , random >=1.1
     , secp256k1-haskell >=1.0.0
