--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name: haskoin-wallet
-version: &version 0.7.2
+version: &version 0.8.0
 synopsis: Lightweight command-line wallet for Bitcoin and Bitcoin Cash
 description: !
   haskoin-wallet (hw) is a lightweight Bitcoin wallet using BIP39 mnemonics and
@@ -30,19 +30,24 @@ dependencies:
   base64-bytestring: ">= 1.0.0.3"
   bytestring: ">= 0.10.10.0"
   cereal: ">= 0.5.8.1"
+  conduit: ">= 1.3.5"
   containers: ">= 0.6.2.1"
   data-default: ">= 0.7.1.1"
   directory: ">= 1.3.6.0"
   Decimal: ">= 0.5.1"
   entropy: ">= 0.4.1.6"
+  esqueleto: ">=3.5.10.1"
   haskeline: ">= 0.7.5.0"
   haskoin-core: ">= 1.0.0"
   haskoin-store-data: ">= 1.0.0"
   http-types: ">= 0.12.3"
   lens: ">= 4.18.1"
   lens-aeson: ">= 1.1"
+  monad-logger: ">= 0.3.40"
   mtl: ">= 2.2.2"
   optparse-applicative: ">= 0.15.1.0"
+  persistent: ">= 2.14.5.1"
+  persistent-sqlite: ">= 2.13.1.1"
   pretty: ">= 1.1.3.6"
   random: ">= 1.1"
   secp256k1-haskell: ">= 1.0.0"
