--- a/haskoin-wallet.cabal
+++ b/haskoin-wallet.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 3b64153f511007896e597194427d818ad9fdaeb1d22677507b84cf0f4af5505a
+-- hash: 6f0dde30af23f700c179b2d4bbcce8c52522ccec3bf337d4ec5dc91481f932af
 
 name:           haskoin-wallet
 version:        0.8.0
@@ -61,6 +61,7 @@ library
     , persistent-sqlite >=2.13.1.1
     , pretty >=1.1.3.6
     , random >=1.1
+    , raw-strings-qq >=1.1
     , secp256k1-haskell >=1.0.0
     , string-conversions >=0.4.0.1
     , text >=1.2.4.0
@@ -120,6 +121,7 @@ executable hw
     , persistent-sqlite >=2.13.1.1
     , pretty >=1.1.3.6
     , random >=1.1
+    , raw-strings-qq >=1.1
     , secp256k1-haskell >=1.0.0
     , string-conversions >=0.4.0.1
     , text >=1.2.4.0
@@ -178,6 +180,7 @@ test-suite spec
     , persistent-sqlite >=2.13.1.1
     , pretty >=1.1.3.6
     , random >=1.1
+    , raw-strings-qq >=1.1
     , secp256k1-haskell >=1.0.0
     , string-conversions >=0.4.0.1
     , text >=1.2.4.0
