--- a/package.yaml
+++ b/package.yaml
@@ -50,6 +50,7 @@ dependencies:
   persistent-sqlite: ">= 2.13.1.1"
   pretty: ">= 1.1.3.6"
   random: ">= 1.1"
+  raw-strings-qq: ">= 1.1"
   secp256k1-haskell: ">= 1.0.0"
   string-conversions: ">= 0.4.0.1"
   text: ">= 1.2.4.0"
