--- a/haskoin-wallet.cabal
+++ b/haskoin-wallet.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 1eb9936fc37d41e7c68c0f7771347ec99a57e605a8fcbcd2e7569143126300b4
+-- hash: fa14e61d56456743a702f2f3fbfb7f38aab65c725eb1be90ce577b700be1cba2
 
 name:           haskoin-wallet
 version:        0.8.0
@@ -71,17 +71,17 @@ library
     , unordered-containers >=0.2.10.0
     , wreq >=0.5.3.2
   exposed-modules:
-      Network.Haskoin.Wallet
-      Network.Haskoin.Wallet.Amounts
-      Network.Haskoin.Wallet.Commands
-      Network.Haskoin.Wallet.Config
-      Network.Haskoin.Wallet.Database
-      Network.Haskoin.Wallet.Entropy
-      Network.Haskoin.Wallet.FileIO
-      Network.Haskoin.Wallet.Parser
-      Network.Haskoin.Wallet.Signing
-      Network.Haskoin.Wallet.TxInfo
-      Network.Haskoin.Wallet.Util
+      Haskoin.Wallet
+      Haskoin.Wallet.Amounts
+      Haskoin.Wallet.Commands
+      Haskoin.Wallet.Config
+      Haskoin.Wallet.Database
+      Haskoin.Wallet.Entropy
+      Haskoin.Wallet.FileIO
+      Haskoin.Wallet.Parser
+      Haskoin.Wallet.Signing
+      Haskoin.Wallet.TxInfo
+      Haskoin.Wallet.Util
   other-modules:
       Paths_haskoin_wallet
   default-language: Haskell2010
@@ -138,11 +138,11 @@ test-suite spec
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Network.Haskoin.Wallet.AmountsSpec
-      Network.Haskoin.Wallet.CommandsSpec
-      Network.Haskoin.Wallet.EntropySpec
-      Network.Haskoin.Wallet.SigningSpec
-      Network.Haskoin.Wallet.TestUtils
+      Haskoin.Wallet.AmountsSpec
+      Haskoin.Wallet.CommandsSpec
+      Haskoin.Wallet.EntropySpec
+      Haskoin.Wallet.SigningSpec
+      Haskoin.Wallet.TestUtils
       Paths_haskoin_wallet
   hs-source-dirs:
       test
