--- a/haskoin-wallet.cabal
+++ b/haskoin-wallet.cabal
@@ -1,13 +1,13 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.2.
+-- This file has been generated from package.yaml by hpack version 0.36.0.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 9428b61cc16c2222adae2f1931d2eb6ac71299ed2352c243d9c7f9e298c51bef
+-- hash: 0e1826aa518f8c7890f529498b3362e18f28ddf992adaf9192167af089f6bd44
 
 name:           haskoin-wallet
-version:        0.7.2
+version:        0.8.0
 synopsis:       Lightweight command-line wallet for Bitcoin and Bitcoin Cash
 description:    haskoin-wallet (hw) is a lightweight Bitcoin wallet using BIP39 mnemonics and
                 BIP44 account structure. It requires a full blockchain index such as
@@ -42,38 +42,47 @@ library
     , base64-bytestring >=1.0.0.3
     , bytestring >=0.10.10.0
     , cereal >=0.5.8.1
+    , conduit >=1.3.5
     , containers >=0.6.2.1
     , data-default >=0.7.1.1
     , directory >=1.3.6.0
     , entropy >=0.4.1.6
+    , esqueleto >=3.5.10.1
     , haskeline >=0.7.5.0
     , haskoin-core >=1.0.0
     , haskoin-store-data >=1.0.0
     , http-types >=0.12.3
     , lens >=4.18.1
     , lens-aeson >=1.1
+    , monad-logger >=0.3.40
     , mtl >=2.2.2
     , optparse-applicative >=0.15.1.0
+    , persistent >=2.14.5.1
+    , persistent-sqlite >=2.13.1.1
     , pretty >=1.1.3.6
     , random >=1.1
+    , raw-strings-qq >=1.1
     , secp256k1-haskell >=1.0.0
     , string-conversions >=0.4.0.1
     , text >=1.2.4.0
+    , time >=1.12.2
     , tostring >=0.2.1.1
     , transformers >=0.5.6.2
     , unordered-containers >=0.2.10.0
     , wreq >=0.5.3.2
   exposed-modules:
-      Network.Haskoin.Wallet
-      Network.Haskoin.Wallet.AccountStore
-      Network.Haskoin.Wallet.Amounts
-      Network.Haskoin.Wallet.Commands
-      Network.Haskoin.Wallet.Entropy
-      Network.Haskoin.Wallet.FileIO
-      Network.Haskoin.Wallet.Parser
-      Network.Haskoin.Wallet.Signing
-      Network.Haskoin.Wallet.TxInfo
-      Network.Haskoin.Wallet.Util
+      Haskoin.Wallet
+      Haskoin.Wallet.Amounts
+      Haskoin.Wallet.Commands
+      Haskoin.Wallet.Config
+      Haskoin.Wallet.Database
+      Haskoin.Wallet.Entropy
+      Haskoin.Wallet.FileIO
+      Haskoin.Wallet.Main
+      Haskoin.Wallet.Parser
+      Haskoin.Wallet.Signing
+      Haskoin.Wallet.TxInfo
+      Haskoin.Wallet.Util
   other-modules:
       Paths_haskoin_wallet
   default-language: Haskell2010
@@ -93,24 +102,31 @@ executable hw
     , base64-bytestring >=1.0.0.3
     , bytestring >=0.10.10.0
     , cereal >=0.5.8.1
+    , conduit >=1.3.5
     , containers >=0.6.2.1
     , data-default >=0.7.1.1
     , directory >=1.3.6.0
     , entropy >=0.4.1.6
+    , esqueleto >=3.5.10.1
     , haskeline >=0.7.5.0
     , haskoin-core >=1.0.0
     , haskoin-store-data >=1.0.0
-    , haskoin-wallet ==0.7.2
+    , haskoin-wallet ==0.8.0
     , http-types >=0.12.3
     , lens >=4.18.1
     , lens-aeson >=1.1
+    , monad-logger >=0.3.40
     , mtl >=2.2.2
     , optparse-applicative >=0.15.1.0
+    , persistent >=2.14.5.1
+    , persistent-sqlite >=2.13.1.1
     , pretty >=1.1.3.6
     , random >=1.1
+    , raw-strings-qq >=1.1
     , secp256k1-haskell >=1.0.0
     , string-conversions >=0.4.0.1
     , text >=1.2.4.0
+    , time >=1.12.2
     , tostring >=0.2.1.1
     , transformers >=0.5.6.2
     , unordered-containers >=0.2.10.0
@@ -123,11 +139,11 @@ test-suite spec
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Network.Haskoin.Wallet.AccountStoreSpec
-      Network.Haskoin.Wallet.AmountsSpec
-      Network.Haskoin.Wallet.EntropySpec
-      Network.Haskoin.Wallet.SigningSpec
-      Network.Haskoin.Wallet.TestUtils
+      Haskoin.Wallet.AmountsSpec
+      Haskoin.Wallet.CommandsSpec
+      Haskoin.Wallet.EntropySpec
+      Haskoin.Wallet.SigningSpec
+      Haskoin.Wallet.TestUtils
       Paths_haskoin_wallet
   hs-source-dirs:
       test
@@ -144,25 +160,32 @@ test-suite spec
     , base64-bytestring >=1.0.0.3
     , bytestring >=0.10.10.0
     , cereal >=0.5.8.1
+    , conduit >=1.3.5
     , containers >=0.6.2.1
     , data-default >=0.7.1.1
     , directory >=1.3.6.0
     , entropy >=0.4.1.6
+    , esqueleto >=3.5.10.1
     , haskeline >=0.7.5.0
     , haskoin-core >=1.0.0
     , haskoin-store-data >=1.0.0
-    , haskoin-wallet ==0.7.2
+    , haskoin-wallet ==0.8.0
     , hspec >=2.7.1
     , http-types >=0.12.3
     , lens >=4.18.1
     , lens-aeson >=1.1
+    , monad-logger >=0.3.40
     , mtl >=2.2.2
     , optparse-applicative >=0.15.1.0
+    , persistent >=2.14.5.1
+    , persistent-sqlite >=2.13.1.1
     , pretty >=1.1.3.6
     , random >=1.1
+    , raw-strings-qq >=1.1
     , secp256k1-haskell >=1.0.0
     , string-conversions >=0.4.0.1
     , text >=1.2.4.0
+    , time >=1.12.2
     , tostring >=0.2.1.1
     , transformers >=0.5.6.2
     , unordered-containers >=0.2.10.0
